--- a/aula_7/package.json
+++ b/aula_7/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.16.3",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {},
   "scripts": {
